--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <img class="img-perfil" src="img/Captura de tela 2023-12-17 221312.png" alt="Foto de perfil">
         <h1>Emille Cassiane</h1>
-        <h2>Studio Malu</h2>
+        <h2>Equipe Studio Malu</h2>
     </header>
     <main class="principal">
         <!--whatsapp-->
